syntax = "proto3";

message SearchRequest {
  string query = 1;
  int32 page_number = 2;
  int32 result_per_page = 3;
}

message List {
  string query = 1;
  int32 page_number = 2;
  int32 result_per_page = 3;
}

message Lists {
  repeated List List = 1;
}

service Search {
  rpc GetList(SearchRequest) returns (List);
  rpc GetLists(SearchRequest) returns (stream List);
}